<resources>
    <string name="app_name">SampleCalculator</string>
    <string name="resposta"> 0 </string>
    <string name="somar">  + </string>
    <string name="subtrair"> - </string>
    <string name="dividir"> / </string>
    <string name="multiplicar"> * </string>
    <string name="porcentagem"> % </string>
    <string name="numeroUm"> 0 </string>
    <string name="numeroDois"> 0 </string>
    <string name="nome"> Este é um aplicativo feito para cálculos simples </string>
    <string name="sobre"> Info </string>
    <string name="irATelaDiversao"> Diversão </string>
    <string name="imagem_animada">Imagem animada</string>
</resources>