<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tela"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#322F2F"
    tools:context=".MainActivity">

    <!-- EditText para Resposta -->
    <EditText
        android:id="@+id/resposta"
        android:layout_width="240dp"
        android:layout_height="72dp"
        android:background="#9C27B0"
        android:ems="10"
        android:inputType="number"
        android:text="@string/resposta"
        android:textColor="#A1887F"
        app:layout_constraintBottom_toTopOf="@+id/numeroUm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    <!-- EditText para Número Um -->
    <EditText
        android:id="@+id/numeroUm"
        android:layout_width="253dp"
        android:layout_height="48dp"
        android:background="#673AB7"
        android:ems="10"
        android:hint="@string/numeroUm"
        android:inputType="number"
        android:textColor="#F1E9E9"
        android:textColorHint="#039BE5"
        app:layout_constraintBottom_toTopOf="@+id/numeroDois"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resposta"
        app:layout_constraintVertical_bias="0.1" />

    <!-- EditText para Número Dois -->
    <EditText
        android:id="@+id/numeroDois"
        android:layout_width="253dp"
        android:layout_height="48dp"
        android:background="#EDEAEA"
        android:ems="10"
        android:hint="@string/numeroDois"
        android:inputType="number"
        android:textColor="#FFFCFC"
        android:textColorHint="#009688"
        app:layout_constraintBottom_toTopOf="@+id/SubtrairNumeros"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numeroUm"
        app:layout_constraintVertical_bias="0.1" />

    <!-- Button Somar -->

    <!-- Button Subtrair -->
    <Button
        android:id="@+id/somarNumeros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="somar"
        android:text="@string/somar"
        app:layout_constraintBottom_toTopOf="@+id/SubtrairNumeros"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.244"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numeroDois"
        app:layout_constraintVertical_bias="0.1" />

    <!-- Button Multiplicar -->
    <Button
        android:id="@+id/SubtrairNumeros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="subtrair"
        android:text="@string/subtrair"
        app:layout_constraintBottom_toTopOf="@+id/multiplicarNumeros"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.244"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/somarNumeros"
        app:layout_constraintVertical_bias="0.1" />

    <!-- Button Dividir -->

    <!-- Button Percentual -->

    <!-- Button Sobre -->

    <Button
        android:id="@+id/multiplicarNumeros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="multiplicar"
        android:text="@string/multiplicar"
        app:layout_constraintBottom_toTopOf="@+id/dividirNumeros"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.244"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SubtrairNumeros"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/dividirNumeros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="dividir"
        android:text="@string/dividir"
        app:layout_constraintBottom_toTopOf="@+id/percentual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.244"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multiplicarNumeros"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/percentual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="porcentagem"
        android:text="@string/porcentagem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.244"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dividirNumeros"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/sobre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="abrirTelaSobre"
        android:text="@string/sobre"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.601"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/percentual"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
